# document-summary

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  compose.yaml  pyproject.toml  samples
.github/workflows/: quality.yml
backend/: config.py  jobs.py  main.py  models.py
backend/pipeline/: chunker.py  cleaner.py  constants.py  detector.py  extractor.py  llm.py
frontend/: app.py  exports.py
scripts/: generate_samples.py
tests/: conftest.py  test_api.py  test_config.py  test_exports.py  test_frontend.py  test_jobs.py  test_pipeline.py  test_providers.py
