[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-pipeline"
version = "0.1.0"
description = "A portfolio-ready document intake and structured summarization pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "fpdf2>=2.8,<3",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-magic>=0.4.27,<1",
  "python-multipart>=0.0.12,<1",
  "requests>=2.32,<3",
  "streamlit>=1.39,<2",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

